<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivStoryImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_placeholder"
        android:contentDescription="@string/story_image"
        android:scaleType="centerCrop"
        android:elevation="4dp"
        android:transitionName="story_image"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/username"
        android:textStyle="bold"
        android:transitionName="story_name"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/story_description"
        android:textColor="@color/colorSecondary"
        android:transitionName="story_name"/>

</LinearLayout>